force-app/main/default/objects/Data_Dictionary_Field__c/Data_Dictionary_Field__c.object-meta.xml
<CustomObject>
    <description>Records of individual fields within standard and custom objects, custom settings, custom metadata, etc.</description>
    <label>Data Dictionary Field</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Dictionary Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>