force-app/main/default/objects/Data_Dictionary_Field__c/fields/Data_Owner_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner_Group_ID__c</fullName>
    <label>Data Owner (Group ID)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>