force-app/main/default/objects/Data_Dictionary_Field__c/fields/Data_Owner_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner_Group_Name__c</fullName>
    <label>Data Owner (Group Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>