force-app/main/default/objects/Data_Dictionary_Field__c/fields/Data_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Data_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Owner (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Dictionary_Field_Ownership</relationshipName>
    <type>Lookup</type>
</CustomField>