force-app/main/default/objects/Data_Dictionary_Field__c/fields/Data_Type_Details_Trunc__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_Details_Trunc__c</fullName>
    <inlineHelpText>In a few cases, Data Type Details can be very long. This is a shortened (truncated) version, limited to 100 characters, for use in filtering.</inlineHelpText>
    <label>Data Type Details (Trunc)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>