force-app/main/default/objects/Data_Dictionary_Field__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <inlineHelpText>The default value of this field, if one has been specified. This can be a fixed value, or a formula.</inlineHelpText>
    <label>Default Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>