force-app/main/default/objects/Data_Dictionary_Field__c/fields/Durable_ID__c.field-meta.xml
<CustomField>
    <fullName>Durable_ID__c</fullName>
    <label>Durable ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>