force-app/main/default/objects/Data_Dictionary_Field__c/fields/Field_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Field_Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Available only for custom fields</inlineHelpText>
    <label>Field Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Dictionary_Fields_Created</relationshipName>
    <type>Lookup</type>
</CustomField>