force-app/main/default/objects/Data_Dictionary_Field__c/fields/Field_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Created_Date__c</fullName>
    <inlineHelpText>Available for custom fields only.</inlineHelpText>
    <label>Field Created Date</label>
    <type>DateTime</type>
</CustomField>