force-app/main/default/objects/Data_Dictionary_Field__c/fields/Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Field_ID__c</fullName>
    <label>Field ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>