force-app/main/default/objects/Data_Dictionary_Field__c/fields/Field_Sets__c.field-meta.xml
<CustomField>
    <fullName>Field_Sets__c</fullName>
    <inlineHelpText>Field Sets that include this Field.</inlineHelpText>
    <label>Field Sets</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>