force-app/main/default/objects/Data_Dictionary_Field__c/fields/Field_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Field_Type_Details__c</fullName>
    <label>Data Type Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>