force-app/main/default/objects/Data_Dictionary_Field__c/fields/First_Sync__c.field-meta.xml
<CustomField>
    <fullName>First_Sync__c</fullName>
    <label>First Sync</label>
    <type>DateTime</type>
</CustomField>