force-app/main/default/objects/Data_Dictionary_Field__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <formula>Object__r.Name &amp; &quot; &quot; &amp; $Label.Data_Dictionary_Header_Seperator &amp; &quot; &quot; &amp; Name</formula>
    <label>Header</label>
    <type>Text</type>
</CustomField>