force-app/main/default/objects/Data_Dictionary_Field__c/fields/History_Tracked__c.field-meta.xml
<CustomField>
    <fullName>History_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is History Tracked</label>
    <type>Checkbox</type>
</CustomField>