force-app/main/default/objects/Data_Dictionary_Field__c/fields/Indicated_Field_Usage__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Field_Usage__c</fullName>
    <inlineHelpText>The selected &quot;Field Usage&quot; value for the field, if any. Note, these values are not calculated, and have no functional impact.</inlineHelpText>
    <label>Indicated Field Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>DeprecateCandidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>