force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Name fields, does the field use an automatically incrementing number for each record name.</inlineHelpText>
    <label>Is Auto-Number</label>
    <type>Checkbox</type>
</CustomField>