force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Case_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only relevant is the field is Unique; this specifies whether case sensitivity is relevant when determining uniqueness.</inlineHelpText>
    <label>Is Case Sensitive (if Unique)</label>
    <type>Checkbox</type>
</CustomField>