force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Default_Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Value_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the default value of this field a formula, rather than a fixed value?</inlineHelpText>
    <label>Is Default Value Formula</label>
    <type>Checkbox</type>
</CustomField>