force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Dependent_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Is_Dependent_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applies only to picklist fields; a dependent picklist means the available values for this field can change based on the selected value in another picklist.</inlineHelpText>
    <label>Is Dependent Picklist</label>
    <type>Checkbox</type>
</CustomField>