force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internally this is typically referred to as &quot;IsCalculated&quot; but we used &quot;Is Formula&quot; here because that&apos;s a little less confusing-- a roll up summary is also calculated, but is not a formula.</description>
    <label>Is Formula</label>
    <type>Checkbox</type>
</CustomField>