force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates if a field has been set as required as part of its base definition. Note that it is also possible for a field to be marked as required on individual page layouts or dynamic forms; so just because a field isn&apos;t marked as required here, it may still be required in a specific context. (And of course tools such as validation rules can also be used to enforce the presence of a value.)</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>