force-app/main/default/objects/Data_Dictionary_Field__c/fields/Is_Unique__c.field-meta.xml
<CustomField>
    <fullName>Is_Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the field enforce that values in it must be unique across all records?</inlineHelpText>
    <label>Is Unique</label>
    <type>Checkbox</type>
</CustomField>