force-app/main/default/objects/Data_Dictionary_Field__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <inlineHelpText>The maximum length of the field.</inlineHelpText>
    <label>Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>