force-app/main/default/objects/Data_Dictionary_Field__c/fields/Metadata_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metadata Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Dictionary_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>