force-app/main/default/objects/Data_Dictionary_Field__c/fields/Metadata_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Last_Modified_Date__c</fullName>
    <label>Metadata Last Modified Date</label>
    <type>DateTime</type>
</CustomField>