force-app/main/default/objects/Data_Dictionary_Field__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Data_Dictionary_Object__c</referenceTo>
    <relationshipLabel>Data Dictionary Fields</relationshipLabel>
    <relationshipName>Data_Dictionary_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>