force-app/main/default/objects/Data_Dictionary_Field__c/fields/Overall_Usage__c.field-meta.xml
<CustomField>
    <fullName>Overall_Usage__c</fullName>
    <formula>IF(NOT(OR(ISNULL(Object__r.Record_Count__c), Object__r.Record_Count__c = 0)), Usage_Count__c /  Object__r.Record_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Usage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>