force-app/main/default/objects/Data_Dictionary_Field__c/fields/Page_Layouts__c.field-meta.xml
<CustomField>
    <fullName>Page_Layouts__c</fullName>
    <inlineHelpText>List of page layouts where this field is used.</inlineHelpText>
    <label>Page Layouts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>