force-app/main/default/objects/Data_Dictionary_Field__c/fields/Permission_Sets_Edit__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Edit__c</fullName>
    <label>Permission Sets (Edit)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>