force-app/main/default/objects/Data_Dictionary_Field__c/fields/Permission_Sets_Read__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Read__c</fullName>
    <label>Permission Sets (Read)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>