force-app/main/default/objects/Data_Dictionary_Field__c/fields/Picklist_Values_All__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values_All__c</fullName>
    <label>Picklist Values (All)</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>