force-app/main/default/objects/Data_Dictionary_Field__c/fields/Picklist_Values_by_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values_by_Record_Type__c</fullName>
    <label>Picklist Values (by Record Type)</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>