force-app/main/default/objects/Data_Dictionary_Field__c/fields/Picklist_Values_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values_Dependencies__c</fullName>
    <label>Picklist Values (Dependencies)</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>