force-app/main/default/objects/Data_Dictionary_Field__c/fields/Picklist_Values_Simple__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values_Simple__c</fullName>
    <inlineHelpText>A simple list of all active picklist values for the field. Note that if this object uses record types, or if this field is part of a dependent picklist pairing, then not all values may be visible at all times. It is also possible that other, deactivated values may be present in records, especially if the picklist is unrestricted.</inlineHelpText>
    <label>Picklist Values (Active)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>