force-app/main/default/objects/Data_Dictionary_Field__c/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <inlineHelpText>For number fields, the overall number of digits permitted, on both sides of the decimal place. For example, Number(4,2), Number(3,3), and Number(6,0) all have a Precision of 6. Note that another common definition of Precision is the numebr of digits to the left of the decimal place, but this is not what Salesforce returns.</inlineHelpText>
    <label>Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>