force-app/main/default/objects/Data_Dictionary_Field__c/fields/Profiles_Edit__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Edit__c</fullName>
    <label>Profiles (Edit)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>