force-app/main/default/objects/Data_Dictionary_Field__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <inlineHelpText>For lookup relationships, this is the name of the relationship for use in SOQL queries and other development needs.</inlineHelpText>
    <label>Relationship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>