force-app/main/default/objects/Data_Dictionary_Field__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <inlineHelpText>For numeric fields, the number of digits to the right of the decimal place.</inlineHelpText>
    <label>Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>