force-app/main/default/objects/Data_Dictionary_Field__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <inlineHelpText>A count of how many records have a value (are not empty/null) for this field, as of the last sync. Note that this information can&apos;t be obtained for certain types of fields--for example, a formula field can theoretically have or not have a value depending on the user viewing the record.</inlineHelpText>
    <label>Usage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>