force-app/main/default/objects/Data_Dictionary_Field__c/fields/Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Value_Formula__c</fullName>
    <label>Value Formula</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>